problem-type-short fixed width and clipped text overflow

--- a/public/stylesheets/sass/problem_type.scss
+++ b/public/stylesheets/sass/problem_type.scss
@@ -1,7 +1,9 @@
 .math-display {
   .problem-type-short {
+    width: 120px;
+    overflow: hidden;
+    
     #problem_type_title {
-      max-width: 100px;
       text-align: center;
     }
     
